--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,13 +114,14 @@
     <string name="language">Language</string>
     <string name="language_description">Change app language</string>
     <string name="language_dialog_title">Select Language</string>
+    <string name="theme">Theme</string>
     <string name="system_default">System Default</string>
     <string name="english">English</string>
     <string name="hindi">हिंदी</string>
     <string name="spanish">Español</string>
     <string name="french">Français</string>
     <string name="german">Deutsch</string>
-    <string name="urdu">اردو</string>
+    <string name="urdu">Urdu</string>
     <string name="default_page">Default Page</string>
     <string name="default_page_all">Start with All links</string>
     <string name="default_page_favourites">Start with Favourites</string>
@@ -281,4 +282,69 @@
     <!-- Clipboard Link Detection Setting -->
     <string name="clipboard_link_detection">Clipboard link detection</string>
     <string name="clipboard_link_detection_description">Automatically detect links in clipboard and show a banner to add them</string>
+
+    <!-- Theme Selection -->
+    <string name="theme_dialog_title">Select Theme</string>
+    <string name="theme_light">Light</string>
+    <string name="theme_dark">Dark</string>
+    <string name="close">Close</string>
+
+    <!-- Local Server Web Interface -->
+    <string name="web_title">Deepr - Link Manager</string>
+    <string name="web_subtitle">Your Personal Link Manager</string>
+    <string name="web_profile_label">Profile:</string>
+    <string name="web_new_profile">New Profile</string>
+    <string name="web_add_new_link">Add New Link</string>
+    <string name="web_link_url">Link URL</string>
+    <string name="web_link_name">Link Name</string>
+    <string name="web_optional">Optional</string>
+    <string name="web_notes_optional">Notes (Optional)</string>
+    <string name="web_tags_optional">Tags (Optional)</string>
+    <string name="web_add_link_button">Add Link</string>
+    <string name="web_your_links">Your Links</string>
+    <string name="web_refresh">Refresh</string>
+    <string name="web_search_placeholder">Search links by name or URL...</string>
+    <string name="web_all_tags">All Tags</string>
+    <string name="web_sort_date">Date Added</string>
+    <string name="web_sort_name">Name</string>
+    <string name="web_sort_opens">Opens</string>
+    <string name="web_opens">opens</string>
+    <string name="web_clear">Clear</string>
+    <string name="web_loading_links">Loading links...</string>
+    <string name="web_loading_description">Please wait while we fetch your saved links.</string>
+    <string name="web_no_links">No links yet!</string>
+    <string name="web_no_links_description">Add your first link using the form above to get started.</string>
+    <string name="web_no_matching">No matching links found!</string>
+    <string name="web_no_matching_description">Try adjusting your search terms or filters.</string>
+    <string name="web_create_profile_title">Create New Profile</string>
+    <string name="web_profile_name_label">Profile Name</string>
+    <string name="web_cancel">Cancel</string>
+    <string name="web_create_profile_button">Create Profile</string>
+    <string name="web_status_creating">Creating...</string>
+    <string name="web_status_added">Added!</string>
+    <string name="web_success_link_added">Link added successfully!</string>
+    <string name="web_error_add_link">Failed to add link. Please try again.</string>
+    <string name="web_error_loading">Error loading links</string>
+    <string name="web_error_refresh">Please try refreshing the page.</string>
+    <string name="web_error_fetch">Failed to load links. Please try again.</string>
+    <string name="web_msg_switched">Switched to profile: </string>
+    <string name="web_msg_filtered">Filtered by tag: </string>
+    <string name="web_msg_filters_cleared">Filters cleared</string>
+    <string name="web_open_link">Open Link</string>
+
+    <!-- Other missing strings -->
+    <string name="enter_profile_name">Enter profile name</string>
+    <string name="all_profiles">All Profiles</string>
+    <string name="profile_name_cannot_be_empty">Profile name cannot be empty</string>
+    <string name="failed_to_fetch_data">Failed to fetch data from %1$s, status code: %2$d</string>
+    <string name="error_fetching_data">Error fetching data from %1$s: %2$s</string>
+    <string name="current_profile">Current Profile</string>
+    <string name="server_info">Server Info</string>
+    <string name="invalid_shared_link">Invalid deeplink from shared content</string>
+    <string name="view_type">View Type</string>
+    <string name="deleted">Deleted</string>
+    <string name="opened_count_reset">Opened count reset</string>
+    <string name="unknown">Unknown</string>
+    <string name="preview">Preview</string>
+    <string name="link_placeholder">https://example.com or app://deeplink</string>
 </resources>
