Refactor: Profiles Grid, Profile Management, and UI refinements

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -21,7 +21,7 @@
     <string name="create_tag">Tag erstellen</string>
     <string name="new_tag">Neuer Tag</string>
     <string name="no_links_saved_yet">Noch keine Links gespeichert</string>
-    <string name="save_your_link_below">Speichern Sie Ihren Link unten, um später schnell darauf zugreifen zu können.</string>
+    <string name="save_your_link_below">Speichern Sie Ihren Link unten, um später schnell darauf zugreifen zu können</string>
     <!-- Menu and Dialog Items -->
     <string name="more_options">Weitere Optionen</string>
     <string name="copy_link">Link kopieren</string>
