--- a/app/src/main/res/values-et/strings.xml
+++ b/app/src/main/res/values-et/strings.xml
@@ -110,7 +110,7 @@
     <string name="custom_port">Sinu valitud port</string>
     <string name="sync_status_invalid">⚠ Failivorming on vigane</string>
     <string name="app_logo">Rakenduse logo</string>
-    <string name="save_your_link_below">Hilisemaks mugavaks ligipääsuks salvesta järgnev link.</string>
+    <string name="save_your_link_below">Hilisemaks mugavaks ligipääsuks salvesta järgnev link</string>
     <string name="enter_link_name_error">Palun sisesta lingi jaoks nimi.</string>
     <string name="tag_name_exists">Sellise nimega silt on juba olemas</string>
     <string name="edit_shortcut">Muuda otselinki</string>
@@ -127,7 +127,7 @@
     <string name="backup_location_not_selected">Varukoopiate asukoht on valimata</string>
     <string name="interval_24_hours">Iga 24 tunni järel (kord päevas)</string>
     <string name="no_favourites_found">Lemmikuid veel pole</string>
-    <string name="no_favourites_description">Nägemaks neid siinkohal märgi lingid lemmikuteks.</string>
+    <string name="no_favourites_description">Nägemaks neid siinkohal märgi lingid lemmikuteks</string>
     <string name="sync_success">Sünkroonimine „%s“ faili õnnestus</string>
     <string name="number_tags">Sildid: %d</string>
     <string name="opened_count">Avamisi: %d</string>
