--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -183,11 +183,11 @@
     <string name="deeplink_already_exists">Такая ссылка уже существует</string>
     <string name="delete">Удалить</string>
     <string name="notes">Заметки</string>
-    <string name="save_your_link_below">Сохраните ссылку ниже, чтобы быстро получать к ней доступ позже.</string>
+    <string name="save_your_link_below">Сохраните ссылку ниже, чтобы быстро получать к ней доступ позже</string>
     <string name="edit_shortcut">Изменить ярлык</string>
     <string name="sort_by_link_ascending">Сортировать по ссылке (По возрастанию)</string>
     <string name="no_favourites_found">В избранном пока ничего нет</string>
-    <string name="no_favourites_description">Отметьте ссылки как избранные, чтобы они появились здесь.</string>
+    <string name="no_favourites_description">Отметьте ссылки как избранные, чтобы они появились здесь</string>
     <string name="opened_count">Открыто: %d</string>
     <string name="backup">Резервная копия</string>
     <string name="sort_by_opened_descending">Сортировать по числу открытий (По убыванию)</string>
